--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"axios": "^0.15.3",
 		"moment": "^2.17.1",
 		"react": "~15.4.0",
-		"react-native": "0.41.2"
+		"react-native": "0.41.2",
+		"react-native-vector-icons": "^4.0.0"
 	},
 	"devDependencies": {
 		"babel-jest": "19.0.0",
