--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"moment": "^2.17.1",
 		"react": "~15.4.0",
 		"react-native": "0.41.2",
+		"react-native-navbar": "^1.6.2",
+		"react-native-router-flux": "^3.38.0",
 		"react-native-vector-icons": "^4.0.0"
 	},
 	"devDependencies": {
